# YulTracer

./: CITATION.cff  GUIDE.md  README.md  README.md.backup  dune-project  yultracer.opam
include/: YulTracerLib.sol
lib/abi_parser/: DAO.json  ast.ml  dune  keccak256.ml  parser.ml  pretty_printer.ml
lib/dialects/evm_shanghai/: base_memory.ml  base_types.ml  crypto_hash.ml  dune  exceptions.ml  fork_types.ml  gas.ml  init.ml  opcodes.ml  state.ml  z3api.ml
lib/interpreter/: dune  error.ml  yul_ast.ml  yul_interpreter.ml  yul_pretty_printer.ml  yul_reductions.ml
lib/parser/: dune  lexer.mll  parser.mly  tokens.mly
lib/parser/evm_shanghai/: dune  lexer.mll  parser.mly
lib/yul_dialects/evm_shanghai/: base_memory.ml  base_types.ml  crypto_hash.ml  dune  exceptions.ml  fork_types.ml  games.ml  gas.ml  init.ml  interpreter.ml  main.ml  opcodes.ml  precompiled_contracts.ml  rlp.ml  state.ml  utils_address.ml  yul.ml  z3api.ml
lib/yul_parser/: dune  lexer.mll  parser.mly  tokens.mly
lib/yul_semantics/: ast.ml  dune  error.ml  interpreter.ml  pretty_printer.ml  reductions.ml  utils.ml
scripts/: check_yul_abi.py  filter_abi.py  keccak256.py  library_linker.sh  process_abi.py  process_yult_functions.sh  remove_checked_arith.awk  run_awk_inplace.sh  update_explore_abi_names.sh  yultracer.mk
test/programs/sequence_generators/: catalan.yul  dragon_curve.yul  fibonacci.yul  fibonacci_rec.yul  pell.yul  primes.yul  primes_w_break.yul  thue_morse.yul
test/programs/solidity_yulInterpreterTests_89b73b6_v0.8.26/: ambiguous_vars.yul  bounded_recursion.yul  exp.yul  expr_nesting_depth_not_exceeded.yul  function_calls.yul  function_scopes.yul  leave.yul  leave_for_init.yul  loop.yul  pop_byte_shr_func.yul  recursion.yul  simple_mstore.yul  switch_statement.yul
test/programs/sorting_algorithms/: bubble.yul  bubble300.yul  heap.yul  heap300.yul  insertion.yul  insertion300.yul  quick.yul  quick1000.yul  quick300.yul  shell.yul  shell1000.yul  shell300.yul
test/scripts/: compare_directories.sh  process_files.sh  test_solidity_yulInterpreterTests.sh
test/smart_contracts/: .gitignore
test/smart_contracts/BurgerSwap/: Makefile  README.md  data.csv
test/smart_contracts/DAO/: README.md  data.csv  run-all-tools.sh  run-dao-tests.sh
test/smart_contracts/Lendf.Me/: Makefile  README.md  data.csv
test/smart_contracts/PredyPool/: Makefile  README.md  run-predy-tests.sh
test/smart_contracts/SmartShot_listing1/: Makefile  README.md  deploy.ini
test/smart_contracts/gigahorse-bench/: README.md  comparison.py  run-mythril-all.sh  run-mythril.py  run-slither-all.sh  run-slither.py  run-smtchecker-all.sh  run-smtchecker.py  run-yultracer-all.sh  (+1 more)
(+998 files in other folders)
