opam-version: "2.0"
maintainer: "linhouy@tcd.ie"
authors: ["Yu-Yang Lin <linhouy@tcd.ie>"]
homepage: "https://github.com/LaifsV1/YulTracer"
bug-reports: "https://github.com/LaifsV1/YulTracer/issues"
# dev-repo: "git+https://example.com/yultracer.git"
license: "MIT"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.10.0"}
  # Add dependencies here, for example:
  "menhir" {>= "20200624"}
]

synopsis: "A bounded safety checker for Yul"
description: """
YulTracer is a bounded tool that checks for assertion violations using a game semantics exploration.
"""

tags: ["yul" "evm" "interpreter" "game-semantics" "safety-checker" "assertions" "verification" "symbolic-execution" "blockchain" "ethereum"]
